// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test click handler 1`] = `
<span
  aria-label="Logo"
  className="Pinpoint Internal Link clickable Pinpoint Logo sm "
  onClick={[Function]}
>
  <img
    alt=""
    className="Pinpoint Image image blurhash"
    decoding="async"
    loading="eager"
    src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
  />
</span>
`;

exports[`Test click handler and link 1`] = `
<a
  aria-label="Logo"
  className="Pinpoint Internal Link Pinpoint Logo sm "
  href="https://pinpoint.com"
  title="Logo"
>
  <img
    alt=""
    className="Pinpoint Image image "
    decoding="async"
    height={320}
    loading="lazy"
    src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
    width={320}
  />
</a>
`;

exports[`Test default state 1`] = `
<span
  aria-label="Logo"
  className="Pinpoint Internal Link  Pinpoint Logo sm "
>
  <img
    alt=""
    className="Pinpoint Image image blurhash"
    decoding="async"
    loading="eager"
    src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
  />
</span>
`;

exports[`Test extra large 1`] = `
<span
  aria-label="Logo"
  className="Pinpoint Internal Link  Pinpoint Logo xl "
>
  <img
    alt=""
    className="Pinpoint Image image "
    decoding="async"
    height={320}
    loading="lazy"
    src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
    width={320}
  />
</span>
`;

exports[`Test extra small 1`] = `
<span
  aria-label="Logo"
  className="Pinpoint Internal Link  Pinpoint Logo xs "
>
  <img
    alt=""
    className="Pinpoint Image image "
    decoding="async"
    height={320}
    loading="lazy"
    src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
    width={320}
  />
</span>
`;

exports[`Test large 1`] = `
<span
  aria-label="Logo"
  className="Pinpoint Internal Link  Pinpoint Logo lg "
>
  <img
    alt=""
    className="Pinpoint Image image blurhash"
    decoding="async"
    loading="eager"
    src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
  />
</span>
`;

exports[`Test link (new tab) 1`] = `
<a
  aria-label="Logo"
  className="Pinpoint Internal Link Pinpoint Logo sm "
  href="https://pinpoint.com"
  rel="noopener noreferrer"
  target="_blank"
  title="Logo"
>
  <img
    alt=""
    className="Pinpoint Image image "
    decoding="async"
    height={320}
    loading="lazy"
    src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
    width={320}
  />
</a>
`;

exports[`Test link 1`] = `
<a
  aria-label="Logo"
  className="Pinpoint Internal Link Pinpoint Logo sm "
  href="https://pinpoint.com"
  title="Logo"
>
  <img
    alt=""
    className="Pinpoint Image image blurhash"
    decoding="async"
    loading="eager"
    src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
  />
</a>
`;

exports[`Test medium 1`] = `
<span
  aria-label="Logo"
  className="Pinpoint Internal Link  Pinpoint Logo md "
>
  <img
    alt=""
    className="Pinpoint Image image "
    decoding="async"
    height={320}
    loading="lazy"
    src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
    width={320}
  />
</span>
`;

exports[`Test small 1`] = `
<span
  aria-label="Logo"
  className="Pinpoint Internal Link  Pinpoint Logo sm "
>
  <img
    alt=""
    className="Pinpoint Image image blurhash"
    decoding="async"
    loading="eager"
    src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
  />
</span>
`;
